syntax = "proto3";

package berty.entity;

option go_package = "berty.tech/core/entity";

import "crypto/keypair/keypair.proto";
import "gogoproto/gogo.proto";

message Envelope {
  string              channel_id = 1 [(gogoproto.customname) = "ChannelID"];
  bytes               encrypted_event = 2;
  keypair.Signature   signature = 3;
  string              source = 4;
}

